reativar barbeiro e correções no agendamento