@@ -6,20 +6,24 @@ import school.sptech.naumspringapi.entity.Barbeiro;
 import school.sptech.naumspringapi.entity.Agendamento;
 import school.sptech.naumspringapi.dto.agendamentoDto.AgendamentoCriacaoDto;
 import school.sptech.naumspringapi.dto.agendamentoDto.AgendamentoListagemDto;
+import school.sptech.naumspringapi.entity.Servico;
 
 import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 @Component
 public class AgendamentoMapper {
 
-    public static AgendamentoListagemDto toDto(Agendamento entity) {
+    public static AgendamentoListagemDto toDto(Agendamento entity, List<Servico> servicos) {
         if (Objects.isNull(entity)) return null;
         AgendamentoListagemDto dto = new AgendamentoListagemDto();
         dto.setId(entity.getId());
         dto.setDataHoraAgendamento(entity.getInicio());
         dto.setCliente(ClienteMapper.toClienteAgendamentoDto(entity.getCliente()));
         dto.setBarbeiro(BarbeiroMapper.toBarbeiroAgendadoDto(entity.getBarbeiro()));
+        dto.setValorTotal(entity.getValorTotal());
+        dto.setServicos(servicos);
         return dto;
     }
 
@@ -33,7 +37,9 @@ public class AgendamentoMapper {
         return entity;
     }
 
-    public static List<AgendamentoListagemDto> toDto(List<Agendamento> entities) {
-        return entities.stream().map(AgendamentoMapper::toDto).toList();
+    public static List<AgendamentoListagemDto> toDto(List<Agendamento> entities, List<Servico> servicos) {
+        return entities.stream()
+                .map(entity -> AgendamentoMapper.toDto(entity, servicos))
+                .collect(Collectors.toList());
     }
 }
